--- a/css/_cases.scss
+++ b/css/_cases.scss
@@ -19,7 +19,7 @@
     @extend %img;
   }
   .overview {
-    margin: 0 auto 5em;
+    margin: 5em auto 0;
   }
   .banner {
     margin: 0 auto;
@@ -29,7 +29,10 @@
     }
   }
   article {
-    margin-top: 5em;
+    margin-top: 3em;
+    h2 {
+      margin-bottom: .5em;
+    }
     h3 {
       width: 100%;
     }
@@ -39,6 +42,22 @@
     p {
       font-size: 1.15em;
       line-height: 1.75em;
+    }
+    .title {
+      position: relative;
+      h3 {
+        display: inline-block;
+        margin-left: 1em;
+      }
+      .highlight {
+        width: 80px;
+        height: 40px;
+        background-color: rgba($green_medium, .35);
+        position: absolute;
+        bottom: 20px;
+        left: 0;
+        z-index: -1;
+      }
     }
     &#challenge {
       @include flexbox();
@@ -74,7 +93,6 @@
       font-style: italic;
       line-height: 1.5em;
       margin-top: 4em;
-      text-align: center;
     }
   }
   .pager {
