--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,6 +1,31 @@
 /* ===== header ===== */
 header {
   margin: 3.75em 0;
+  &.sticky {
+    background-color: #FFFFFF;
+    border-bottom: 2px solid $green;
+    box-shadow: 0 2px 4px rgba($dark-grey, .25);
+    left: 0;
+    margin-top: 0;
+    padding-top: 10px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    transition: box-shadow .1s ease-in;
+    .width {
+      padding-bottom: 0;
+      @include responsiveMin(700px) {
+        padding-bottom: 1em;
+      }
+      h1 {
+        margin-left: 1em;
+      }
+      .mobile-nav {
+        margin-right: 2em;
+      }
+    }
+  }
   > div {
     @include flexbox($align-items: flex-start);
     padding-bottom: 1em;
@@ -44,7 +69,7 @@ header {
         outline: none;
       }
       span {
-        background-color: $green_medium;
+        background-color: $green;
         content: "";
         display: block;
         height: .3em;
