--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -32,6 +32,7 @@
 	}
 	#intro {
 		margin-top: 100px;
+		position: relative;
 		.box {
 			@extend %box;
 			height: 150px;
@@ -43,7 +44,7 @@
 			line-height: 1.5em;
 			margin: 0;
 			position: absolute;
-			bottom: 10%;
+			bottom: 15%;
 			left: 6%;
 			transition: font-size .5s;
 			@include responsiveMin(700px) {
