--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -1,18 +1,20 @@
 /* ===== portfolio ===== */
+%proportionFix {
+  @include responsiveMin(1032px) {
+    flex-basis: 70%;
+  }
+}
 .portfolio {
   > article {
     @include flexbox($justify-content: center);
     background-color: darken($light-grey, 2%);
     box-sizing: border-box;
-    margin: 7em 0;
+    margin: 5em 0;
     min-width: 300px;
     padding: 20px;
-    @include responsiveMin(60em) {
+    @include responsiveMin(1032px) {
       justify-content: space-between;
-      margin: 10em 0;
-    }
-    &:first-of-type {
-      margin-top: 5em;
+      margin: 7em 0;
     }
     &.right {
       flex-flow: row-reverse;
@@ -27,21 +29,29 @@
         opacity: 1;
       }
     }
-    img {
-      box-shadow: 0 2px 4px rgba($dark-grey, .5);
-      flex: 0 1 100%;
-      height: auto;
-      margin-bottom: 1em;
-      max-width: 600px;
-      width: 100%;
-      @include responsiveMin(60em) {
-        flex: 0 1 62%;
-        margin-bottom: 0;
+    a {
+      img {
+        box-shadow: 0 2px 4px rgba($dark-grey, .5);
+        flex: 0 1 100%;
+        height: auto;
+        margin-bottom: 1em;
+        max-width: 600px;
+        width: 100%;
+        @include responsiveMin(1032px) {
+          flex: 0 1 62%;
+          margin-bottom: 0;
+        }
+      }      
+      &.proportion_fix {
+        @extend %proportionFix;
+        img {
+          @extend %proportionFix;
+        }
       }
     }
     .details {
       flex: 0 1 100%;
-      @include responsiveMin(60em) {
+      @include responsiveMin(1032px) {
         flex: 0 1 30%;
         &.full {
           flex-basis: 100%;
