file versioning, fixing errors

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,6 +1,9 @@
 /* ===== header ===== */
 header {
-  margin: 3.75em 0;
+  margin: 2em 0;
+  @include responsiveMin(500px) {
+    margin: 3em 0;
+  }
   &.sticky {
     background-color: #FFFFFF;
     border-bottom: 2px solid $green;
