--- a/css/_cases.scss
+++ b/css/_cases.scss
@@ -14,6 +14,15 @@
     &.image_small {
       max-width: 600px;
     }
+    &.mobile_small {
+      max-height: 60vh !important;
+      width: auto !important;
+      @include responsiveMin(500px) {
+        height: auto;
+        max-width: 1000px;
+        width: 100%;
+      }
+    }
   }
   video {
     @extend %img;
@@ -97,6 +106,12 @@
   }
   .pager {
     @include flexbox();
+  }
+}
+
+.max_height {
+  @include responsiveMax(500px) {
+    
   }
 }
 
