update color to purple and make it easier to change primary color in the future

--- a/css/_cases.scss
+++ b/css/_cases.scss
@@ -61,7 +61,7 @@
       .highlight {
         width: 80px;
         height: 40px;
-        background-color: rgba($green_medium, .35);
+        background-color: rgba($primary_lighter, .35);
         position: absolute;
         bottom: 20px;
         left: 0;
