--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -147,7 +147,7 @@ textarea:-webkit-autofill {
   ), webkit);
 }
 #scrollTop {
-  background-color: $green;
+  background-color: $primary_color;
   border-radius: 50%;
   box-shadow: 0 2px 4px rgba($dark-grey, .5);
   bottom: .5em;
