--- a/css/_about.scss
+++ b/css/_about.scss
@@ -49,7 +49,7 @@
         .highlight {
           width: 200px;
           height: 250px;
-          background-color: $green_medium;
+          background-color: $primary_lighter;
           position: absolute;
           bottom: 0;
           left: -10px;
